# pytest_workshop

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pytest_workshop/: __init__.py  calculator.py
tests/: __init__.py  test_calculator.py
